# rust_auth_async_jwt

./: .gitignore  Cargo.toml  README.md
migrations/2024-02-04-080516_add_users/: up.sql
src/: auth.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs  utils.rs
