[package]
name = "rust_auth_async_jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
chrono = {version = "0.4.33", features = ["serde"]}
derive_more = "0.99.17"
diesel = { version = "2.1.4"  , features=["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.30"
r2d2 = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
actix-service = "2.0.2"
reqwest = { version = "0.11.24", features = ["json"] }
actix-rt = "2.9.0"
thiserror = "1.0"
alcoholic_jwt = "1.0.0"
env_logger = "0.9"
argonautica = "0.2.0"
log = "0.4"